--- a/terraform/stage/terraform.tfvars.example
+++ b/terraform/stage/terraform.tfvars.example
@@ -1,4 +1,4 @@
-project = "infra-198011"
+project = "change-me"
 public_key_path = "~/.ssh/appuser.pub"
 disk_image = "reddit-base"
 private_key_path = "~/.ssh/appuser"
