--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,8 +1,14 @@
 [defaults]
-inventory = ./inventory
+inventory = ./environments/stage/inventory
+#inventory = ./inventory
 #inventory = ./gce.py
 remote_user = appuser
 private_key_file = ~/.ssh/appuser
 host_key_checking = False
 retry_files_enabled = False
+roles_path = ./roles
+
+[diff]
+always = True
+context = 5
 
