Add static inventory

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,5 +1,7 @@
 [defaults]
 inventory = ./environments/stage/inventory
+#inventory = ./environments/prod/gce.py
+#inventory = ./environments/stage/gce.py
 #inventory = ./inventory
 #inventory = ./gce.py
 remote_user = appuser
@@ -7,6 +9,7 @@ private_key_file = ~/.ssh/appuser
 host_key_checking = False
 retry_files_enabled = False
 roles_path = ./roles
+vault_password_file = vault.key
 
 [diff]
 always = True
