Updated Dynamic Inventory prod/stage

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,7 +1,7 @@
 [defaults]
-inventory = ./environments/stage/inventory
+#inventory = ./environments/stage/inventory
 #inventory = ./environments/prod/gce.py
-#inventory = ./environments/stage/gce.py
+inventory = ./environments/stage/gce.py
 #inventory = ./inventory
 #inventory = ./gce.py
 remote_user = appuser
