Add reduced images

--- a/src/comment/Dockerfile
+++ b/src/comment/Dockerfile
@@ -4,12 +4,10 @@ ENV APP_HOME /app
 ENV COMMENT_DATABASE_HOST comment_db
 ENV COMMENT_DATABASE comments
 
-RUN apk add --no-cache gcc g++ make ruby-bundler ruby-dev
-
 WORKDIR $APP_HOME
 COPY . $APP_HOME
 
-RUN bundle install
+RUN apk add --no-cache gcc g++ make ruby-bundler ruby-dev && bundle install
 
 CMD ["puma"]
 
