--- a/src/ui/Dockerfile
+++ b/src/ui/Dockerfile
@@ -6,12 +6,10 @@ ENV POST_SERVICE_PORT 5000
 ENV COMMENT_SERVICE_HOST comment
 ENV COMMENT_SERVICE_PORT 9292
 
-RUN apk add --no-cache gcc g++ make ruby-bundler ruby-dev
-
 WORKDIR $APP_HOME
 COPY . $APP_HOME
 
-RUN bundle install
+RUN apk add --no-cache gcc g++ make ruby-bundler ruby-dev && bundle install
 
 CMD ["puma"]
 
