--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ image: ruby:2.4.2
 stages:
   - build
   - test
-  - deploy
+  - review
 
 variables:
   DATABASE_URL: 'mongodb://mongo/user_posts'
@@ -28,8 +28,11 @@ test_integration_job:
   script:
     - echo 'Testing 2'
 
-deploy_job:
+deploy_dev_job:
   stage: deploy
   script:
     - echo 'Deploy'
+  environment:
+    name: dev
+    url: http://dev.example.com
 
