--- a/docker/.env.example
+++ b/docker/.env.example
@@ -1,8 +1,10 @@
 USERNAME=changeme
 MONGO_VERSION=3.2
-UI_VERSION=1.0
-POST_VERSION=1.0
-COMMENT_VERSION=1.0
+UI_VERSION=latest
+POST_VERSION=latest
+COMMENT_VERSION=latest
+PROMETHEUS_VERSION=latest
 UI_SERVICE_HOST_PORT=9292
 UI_SERVICE_CON_PORT=9292
+SRC_PATH=/home/docker-user/src
 
