--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -68,10 +68,38 @@ services:
     networks:
       back_net:
         aliases:
-          - prometheus
+          - node-exporter
       front_net:
         aliases:
-          - prometheus
+          - node-exporter
+
+  mongodb-exporter:
+    image: mirantisworkloads/mongodb-prometheus-exporter:1.0.0
+    ports:
+      - '9001:9001'
+    environment:
+      - MONGODB_URL=mongodb://post_db
+    command:
+      - ./mongodb_exporter
+    networks:
+      back_net:
+        aliases:
+          - mongodb-exporter
+      front_net:
+        aliases:
+          - mongodb-exporter
+
+  blackbox-exporter:
+    image: prom/blackbox-exporter:v0.12.0
+    ports:
+      - '9115:9115'
+    networks:
+      back_net:
+        aliases:
+          - blackbox-exporter
+      front_net:
+        aliases:
+          - blackbox-exporter
 
 volumes:
   post_db:
