--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -10,7 +10,7 @@ services:
           - post_db
           - comment_db
   ui:
-    image: ${USERNAME}/ui:${UI_VERSION}
+    image: ${USER_NAME}/ui:${UI_VERSION}
     ports:
       - ${UI_SERVICE_HOST_PORT}:${UI_SERVICE_CON_PORT}/tcp
     networks:
@@ -18,7 +18,7 @@ services:
         aliases:
           - ui
   post:
-    image: ${USERNAME}/post:${POST_VERSION}
+    image: ${USER_NAME}/post:${POST_VERSION}
     networks:
       back_net:
         aliases:
@@ -27,7 +27,7 @@ services:
         aliases:
           - post
   comment:
-    image: ${USERNAME}/comment:${COMMENT_VERSION}
+    image: ${USER_NAME}/comment:${COMMENT_VERSION}
     networks:
       back_net:
         aliases:
